src/styles/common.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap");

:root {
    --ligatures: none;
    --text-size: 14px;
    --font: "Open Sans";
    --sidebar-active: var(--secondary-background);
    --titlebar-height: 29px;
    --titlebar-action-padding: 8px;
    --titlebar-logo-color: var(--secondary-foreground);
    --app-height: 100vh;
    --scrollbar-thickness: 3px;
    --scrollbar-thickness-ff: thin;
    --border-radius: 6px;
    --border-radius-half: 50%;
    --border-radius-user-icon: var(--border-radius-half);
    --border-radius-channel-icon: var(--border-radius-half);
    --border-radius-server-icon: var(--border-radius-half);
    --input-border-width: 2px;
    --textarea-padding: 16px;
    --textarea-line-height: 20px;
    --message-box-padding: 14px;
    --attachment-max-width: 480px;
    --attachment-max-height: 640px;
    --attachment-default-width: 400px;
    --attachment-max-text-width: 800px;
    --bottom-navigation-height: 50px;
}

html {
    background: var(--background);
    font-family: var(--font);
}

* {
    box-sizing: border-box;
}

* {
    scrollbar-width: var(--scrollbar-thickness-ff);
    scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
}

::-webkit-scrollbar {
    width: var(--scrollbar-thickness);
    height: var(--scrollbar-thickness);
}

::-webkit-scrollbar-track {
    background: var(--scrollbar-track);
}

::-webkit-scrollbar-thumb {
    min-width: 30px;
    min-height: 30px;

    background-clip: content-box;
    background: var(--scrollbar-thumb);
}

::-webkit-scrollbar-corner {
    background: transparent;
}

